infra/k8s/storage-app-chart/templates/services/api-gateway/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    app.kubernetes.io/name: gateway-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: gateway.lustre.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gateway-service
            port: 
              number: 8081
